<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="ui.AgEditarProductoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F0F8F1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="16dp"
                android:background="#558B2F"
                android:fontFamily="sans-serif-black"
                android:paddingTop="5dp"
                android:text="@string/titulo_ep"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <!-- Campos de entrada -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ep_namePro"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/edit_text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_cat"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_pre"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_can"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:background="@android:drawable/edit_text" />

            <!-- Descripción -->
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_des"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:inputType="textMultiLine" />

            <!-- Imagen del producto -->
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_moIma"
                android:textSize="18sp"/>

            <!-- Botones -->
            <Button
                android:id="@+id/btnSelectArchive"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#2E7D32"
                android:text="@string/ep_btn_sele"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnActulizarPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="#F9A825"
                android:drawableEnd="@drawable/baseline_save_24"
                android:text="@string/ep_btn_a"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnCancelProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="#403F3F"
                android:drawableEnd="@drawable/baseline_cancel_24"
                android:text="@string/ep_btn_c"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>