<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.CliEditarPerfilFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F0F8F1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Título -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:paddingTop="15dp"
                android:text="@string/titulo_epu"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!-- Imagen circular -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"

                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <!-- Botón de seleccionar archivo -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:backgroundTint="#2E7D32"
                android:text="@string/ep_btn_sele"
                android:textColor="#FFFFFF" />

            <!-- Campos de texto y botones adicionales -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/epu_nameuser"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/edit_text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/epu_dir"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/epu_pre"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ep_can"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/insertCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/epu_cont"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/InsertNewContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnActualizarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="#F9A825"
                android:drawableEnd="@drawable/baseline_save_24"
                android:text="@string/epu_btn_a"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnCancelActulizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="#403F3F"
                android:drawableEnd="@drawable/baseline_cancel_24"
                android:text="@string/epu_btn_c"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>